# Kvantum-Transpiler

./: CMakeLists.txt  README.md  main.cpp
ast/: AST_nodeoperation.hpp  annotation.hpp  ast.cpp  ast.hpp  ast_nodeoperation.hpp  expressionvisitor.hpp  functionnode.cpp  functionnode.hpp  statementvisitor.hpp  treevisitor.hpp
c_codegen/: c_ast.hpp  c_codegen.cpp  c_codegen.hpp  c_type.cpp  c_type.hpp
codegen/: c_codegenerator.cpp  c_codegenerator.hpp  codeexecutorinterface.hpp  codegenerator.cpp  codegenerator.hpp  functioncodegenerator.cpp  functioncodegenerator.hpp
common/: compiler.cpp  compiler.hpp  diagnostics.hpp  generic.cpp  generic.hpp  module.cpp  module.hpp  token.hpp  type.cpp  type.hpp  util.cpp  util.hpp
include/ast/: AST_nodeoperation.hpp  annotation.hpp  ast.hpp  expressionvisitor.hpp  statementvisitor.hpp  treevisitor.hpp
include/c_codegen/: c_ast.hpp  c_codegen.hpp  c_type.hpp
include/codegen/: c_codegenerator.hpp  codeexecutorinterface.hpp
include/common/: compiler.hpp  diagnostics.hpp  mainheader.hpp  module.hpp  token.hpp  type.hpp
include/interpreter/: interpreter.hpp  value.hpp
include/lexer/: lexer.hpp  scope.hpp
include/parser/: functiondefparser.hpp  parser.hpp  semanticanalyzer.hpp  symbolstack.hpp  typechecker.hpp
include/preproc/: preprocessor.hpp
interpreter/: interpreter.cpp  interpreter.hpp  value.cpp  value.hpp
lexer/: lexer.cpp  lexer.hpp  scope.hpp
parser/: expressionparser.cpp  expressionparser.hpp  functiondefparser.cpp  functiondefparser.hpp  moduleparser.cpp  moduleparser.hpp  parser.cpp  parser.hpp  parser_statement.cpp  symbolstack.hpp  typechecker.cpp  typechecker.hpp
preproc/: preprocessor.cpp  preprocessor.hpp
source/: main.cpp
source/ast/: ast.cpp
source/c_codegen/: c_codegen.cpp  c_type.cpp
source/codegen/: c_codegenerator.cpp
source/common/: compiler.cpp  generic.cpp  module.cpp  type.cpp
source/interpreter/: interpreter.cpp  value.cpp
source/lexer/: lexer.cpp
source/parser/: functiondefparser.cpp  parser.cpp  parser_statement.cpp  semanticanalyzer.cpp  typechecker.cpp
source/preproc/: preprocessor.cpp
